modules/wycs/tests/invalid/test_104.wyal
define Closure({int,int} pairs) as:
  forall(int x, int y, int z):
    if:
      (x, y) in pairs
      (y, z) in pairs 
    then:
      (x,y) in pairs 

assert Closure({(1,2),(2,3)})


